syntax = "proto3";

option csharp_namespace = "TaskServiceProto";

import "google/protobuf/timestamp.proto";

package task_service;

service TaskService {
    rpc CreateTask(CreateTaskRequest) returns (TaskResponse);
    rpc GetTask(GetTaskRequest) returns (TaskResponse);
    rpc UpdateTask(UpdateTaskRequest) returns (TaskResponse);
    rpc DeleteTask(DeleteTaskRequest) returns (Response);
    rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
}

message TaskModel {
    string id = 1;
    string title = 2;
    string description = 3;
    string projectId = 4;
    string assigneeId = 5;
    repeated string tags = 6;
    google.protobuf.Timestamp createdAt = 7;
    google.protobuf.Timestamp updatedAt = 8;
}

message CreateTaskRequest {
    string title = 1;
    string description = 2;
    string projectId = 3;
    string assigneeId = 4;
    repeated string tags = 5;
}

message GetTaskRequest {
    string id = 1;
}

message UpdateTaskRequest {
    string id = 1;
    string title = 2;
    string description = 3;
    string assigneeId = 4;
    repeated string tags = 5;
}

message DeleteTaskRequest {
    string id = 1;
}

message ListTasksRequest {
    string projectId = 1;
    string assigneeId = 2;
    repeated string tags = 3;
}

message TaskResponse {
    TaskModel task = 1;
}

message ListTasksResponse {
    repeated TaskModel tasks = 1;
}

message Response {
    string message = 1;
    bool success = 2;
}